Stop tags on the project index from wrapping

--- a/src/app/components/pages/projects/all/all.component.scss
+++ b/src/app/components/pages/projects/all/all.component.scss
@@ -15,6 +15,7 @@ h3 {
     border-width: 1px;
     border-style: solid;
     user-select: none;
+    white-space: nowrap;
   }
 
   .incomplete {
